# dapla-toolbelt-metadata

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  backstage.yaml  noxfile.py  pyproject.toml  sonar-project.properties  variable_definition_template_2025-02-20T19-25-35.yaml
.github/workflows/: add-label-to-pr.yml  constraints.txt  docs.yml  labeler.yml  pyproject.yml  release.yml  tests.yml
demo/: create_metadata_for_new_dataset.ipynb  create_metadata_for_new_period.ipynb
demo/datasets/: create_metadata_for_new_dataset.ipynb  create_metadata_for_new_period.ipynb
demo/standards/: navnestandard.ipynb
demo/variable_definitions/: README.md  draft.json  les_variabeldefinisjon.ipynb  les_variabeldefinisjoner.ipynb  lese_en_variabeldefinisjon.ipynb  lese_flere_variabeldefinisjoner.ipynb  lese_variabel_definisjoner.ipynb  lese_variabler.ipynb  migrate_variable.ipynb  migrer_variabeldefinisjon.ipynb  migrer_variabeldefinisjoner.ipynb  migrere_en_variabeldefinisjon.ipynb  migrere_variabel_definisjon.ipynb  ny_gyldighetsperiode_variabeldefinisjon.ipynb  ny_variabeldefinisjon.ipynb  opprette_gyldighetsperiode.ipynb  opprette_utkast.ipynb  opprette_variabel_definisjon.ipynb  publiser_variabeldefinisjon_eksternt.ipynb  publiser_variabeldefinisjon_internt.ipynb  publisere_utkast.ipynb  publisere_variabel_definisjon.ipynb  publisere_variabel_definisjon_eksternt.ipynb  publisere_variabel_definisjon_internt.ipynb  publisere_variabeldefinisjon_eksternt.ipynb  publisere_variabeldefinisjon_internt.ipynb  read_variable_definions.ipynb  read_variable_definitions.ipynb  readme-notebook.ipynb  rediger_publisert_variabeldefinisjon.ipynb  rediger_utkast_variabeldefinisjon.ipynb  redigere_publisert_variabel_definisjon.ipynb  redigere_publisert_variabeldefinisjon.ipynb  redigere_utkast.ipynb  reserver_kortnavn.ipynb  sjekk_kortnavn.ipynb  sjekk_kortnavn_variabeldefinisjon.ipynb  sjekk_migrerte_variabeldefinisjoner.ipynb  sjekk_om_kortnavn_er_ledig.ipynb  slett_utkast_variabeldefinisjon.ipynb  (+6 more)
docs/: conf.py  dapla_metadata.dapla.rst  dapla_metadata.datasets.compatibility.rst  dapla_metadata.datasets.external_sources.rst  dapla_metadata.datasets.rst  dapla_metadata.datasets.utility.rst  dapla_metadata.rst  dapla_metadata.standards.rst  dapla_metadata.standards.utils.rst  dapla_metadata.variable_definitions.rst  index.md  reference.md  vardef_client.md
klass_subsets/: __init__.py  b.json  code_list_from_subset.py  code_to_code.json  codes_0.json  codes_1.json  codes_2.json  codes_3.json  codes_4.json  codes_5.json  codes_6.json  codes_7.json  correspondence_xml.py  create_all_versions.py  create_xml_from_subset.py  filter2.py  filter3.py  filter_codes_by_period.py  fylkfunk_from_web.json  generate_correspondence.py  generate_xml.py  klass_corr.py  migration_list.py  migration_lists.py  name_to_id.py  no_changes_all_versions.py  output.xml  parent.json  periods.json  periods_to_test.json  periods_to_test_c2c.json  read_json_codes.py  transform_data.py  utils.py  utrekk.json  v2.json  version_0.json  version_0_json.json  version_1.json  version_2.json  (+1 more)
klass_subsets/resources/: a.txt  b.txt  c.txt  subsets_migrations.txt
schemas/jsonschema/: complete-response-schema.json
src/: __main__.py
src/dapla_metadata/: __init__.py
src/dapla_metadata/_shared/: __init__.py  config.py  enums.py  user_info.py  utils.py
src/dapla_metadata/dapla/: __init__.py  name_validator.py  standards.py  user_info.py
src/dapla_metadata/datasets/: __init__.py  _merge.py  code_list.py  config.py  core.py  dapla_dataset_path_info.py  dataset_parser.py  model_backwards_compatibility.py  model_validation.py  statistic_subject_mapping.py  user_info.py
src/dapla_metadata/standards/: __init__.py  name_validator.py  naming_standards.py  standard_validators.py
src/dapla_metadata/variable_definitions/: VardokVardefIdPair.py  __init__.py  complete_patch_output.py  config.py  exceptions.py  vardef.py  vardok_id.py  vardok_vardef_id_pair.py  variable_definition.py
src/dapla_toolbelt_metadata/: __init__.py  __main__.py
src/dapla_toolbelt_metadata/dataset/: __init__.py  config.py  (+8 more)
src/dataset/: __init__.py  code_list.py  config.py  core.py  dapla_dataset_path_info.py  dataset_parser.py  model_backwards_compatibility.py  model_validation.py  statistic_subject_mapping.py  user_info.py
src/datasets/: code_list.py  config.py  core.py  dataset_parser.py  model_validation.py  statistic_subject_mapping.py  user_info.py
src/tests/: test_functions.py
tests/: __init__.py  conftest.py  test_functions.py  test_main.py
tests/_shared/: test_user_info.py
tests/dapla/: __init__.py  test_name_validator.py  test_standards.py  test_user_info.py
tests/dataset/: conftest.py  constants.py  test_code_list.py  test_dapla_dataset_path_info.py  test_datadoc_metadata.py  test_dataset_parser.py  test_file.py  test_model_backwards_compatibility.py  test_statistic_subject_mapping.py  test_user_info.py  test_utils.py  test_validators.py
tests/datasets/: __init__.py  conftest.py  constants.py  datasets.py  test_code_list.py  test_copy_variables.py  test_dapla_dataset_path_info.py  test_datadoc_metadata.py  test_dataset_consistency.py  test_dataset_parser.py  test_model_backwards_compatibility.py  test_pseudonymization.py  test_statistic_subject_mapping.py  test_urn.py  test_user_info.py  test_utils.py  test_validators.py
tests/standards/: __init__.py  conftest.py  test_check_naming_standard.py  test_name_validator.py  test_naming_standards.py  test_standards.py
tests/utils/: __init__.py  constants.py  microcks_testcontainer.py
tests/variable_definitions/: __init__.py  conftest.py  constants.py  test_config.py  test_descriptions.py  test_missing_descriptions.py  test_template.py  test_template_files.py  test_translations.py  test_vardef.py  test_vardef_write_template.py  test_variable_definition.py  test_variable_definition_files.py  test_variable_file_generation.py
vardef-maintenance/: README.md  vardef-maintenance.toml  vardef_client_init.sh
(+135 files in other folders)
